@@ -44,6 +44,7 @@ Feature Additions:
     the client's capabilities.
  -- Separated inline SQL supprt from Firan support so that it can be
     enabled separately.
+ -- Added @eval command.
 
 
 Bug Fixes:
@@ -87,6 +88,9 @@ Bug Fixes:
  -- Fix memory leak in @mail error code path.
  -- Fix memory leak in process_cmdent().
  -- Allow Intel's EMT64 compiler to build the sources (Issue 308).
+ -- Fix 'think [search(eval=hasattr(##,foo))]' by clearing the []-ness from
+    causing mux_exec() to complain about 'eval=hasattr()' not being a
+    function.
 
 
 Performance Enhancements:
